--- a/index.html
+++ b/index.html
@@ -1,4 +1,6 @@
 <html>
-<body>this is github example showing how to merge
+<body>
+<h1>this is github example showing how to merge</h1>
+<h2>that is it(changed this)</h2>
 </body>
 </html>
