--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <html>
 <body>
-<h1>this is github example showing how to merge</h1>
+<h1>this is github example showing how to merge(Content Branch)</h1>
 <h2>that is it(changed this)</h2>
+<p>i am beginer in github</p>
 </body>
 </html>
