--- a/index.html
+++ b/index.html
@@ -2,5 +2,6 @@
 <body>
 <h1>this is github example showing how to merge</h1>
 <h2>that is it(changed this)</h2>
+<p>Testing some cool stuff</p>
 </body>
 </html>
