--- a/index.html
+++ b/index.html
@@ -3,5 +3,6 @@
 <h1>this is github example showing how to merge</h1>
 <h2>that is it(changed this)</h2>
 <p>Testing some cool stuff</p>
+<p>Rafiq ahmad dar</p>
 </body>
 </html>
